// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiToast Props color danger is rendered 1`] = `
<div>
  <div
    class="ouiToast ouiToast--danger"
  >
    <p
      class="ouiScreenReaderOnly"
    >
      A new notification appears
    </p>
    <div
      aria-label="Notification"
      class="ouiToastHeader"
      data-test-subj="ouiToastHeader"
    >
      <span
        class="ouiToastHeader__title"
      >
        test title
      </span>
    </div>
  </div>
</div>
`;

exports[`OuiToast Props color primary is rendered 1`] = `
<div>
  <div
    class="ouiToast ouiToast--primary"
  >
    <p
      class="ouiScreenReaderOnly"
    >
      A new notification appears
    </p>
    <div
      aria-label="Notification"
      class="ouiToastHeader"
      data-test-subj="ouiToastHeader"
    >
      <span
        class="ouiToastHeader__title"
      >
        test title
      </span>
    </div>
  </div>
</div>
`;

exports[`OuiToast Props color success is rendered 1`] = `
<div>
  <div
    class="ouiToast ouiToast--success"
  >
    <p
      class="ouiScreenReaderOnly"
    >
      A new notification appears
    </p>
    <div
      aria-label="Notification"
      class="ouiToastHeader"
      data-test-subj="ouiToastHeader"
    >
      <span
        class="ouiToastHeader__title"
      >
        test title
      </span>
    </div>
  </div>
</div>
`;

exports[`OuiToast Props color warning is rendered 1`] = `
<div>
  <div
    class="ouiToast ouiToast--warning"
  >
    <p
      class="ouiScreenReaderOnly"
    >
      A new notification appears
    </p>
    <div
      aria-label="Notification"
      class="ouiToastHeader"
      data-test-subj="ouiToastHeader"
    >
      <span
        class="ouiToastHeader__title"
      >
        test title
      </span>
    </div>
  </div>
</div>
`;

exports[`OuiToast Props iconType is rendered 1`] = `
<div>
  <div
    class="ouiToast"
  >
    <p
      class="ouiScreenReaderOnly"
    >
      A new notification appears
    </p>
    <div
      aria-label="Notification"
      class="ouiToastHeader"
      data-test-subj="ouiToastHeader"
    >
      <span
        aria-hidden="true"
        class="ouiToastHeader__icon"
        data-ouiicon-type="user"
      />
      <span
        class="ouiToastHeader__title"
      >
        test title
      </span>
    </div>
  </div>
</div>
`;

exports[`OuiToast Props title is rendered 1`] = `
<div>
  <div
    class="ouiToast"
  >
    <p
      class="ouiScreenReaderOnly"
    >
      A new notification appears
    </p>
    <div
      aria-label="Notification"
      class="ouiToastHeader"
      data-test-subj="ouiToastHeader"
    >
      <span
        class="ouiToastHeader__title"
      >
        toast title
      </span>
    </div>
  </div>
</div>
`;

exports[`OuiToast is rendered 1`] = `
<div>
  <div
    aria-label="aria-label"
    class="ouiToast testClass1 testClass2"
    data-test-subj="test subject string"
  >
    <p
      class="ouiScreenReaderOnly"
    >
      A new notification appears
    </p>
    <div
      aria-label="Notification"
      class="ouiToastHeader ouiToastHeader--withBody"
      data-test-subj="ouiToastHeader"
    >
      <span
        class="ouiToastHeader__title"
      >
        test title
      </span>
    </div>
    <div
      class="ouiText ouiText--small ouiToastBody"
    >
      <p>
        Hi
      </p>
    </div>
  </div>
</div>
`;
